# ai-development

./: .env  .gitignore  .pre-commit-config.yaml  README.md  conditional_logic.ipynb  conditional_logic_exercise.ipynb  looping_graph_exercise.ipynb  multiple_inputs.ipynb  pyproject.toml  sequential_graph.ipynb
.github/workflows/: workflows.yaml
advanced_rag/: README.md  chroma.py  main.py  pdf_processor.py  pyproject.toml  query.py  response.py  util.py
agents/: JS_and_React_Revision_Plan.md  agent_bot.py  agent_cuddles.py  agent_rag.py  chatbot_with_memory.py  drafter.py
basic_rag/: README.md  chroma.py  embedding.py  main.py  pyproject.toml  util.py
basics/: looping_graph_exercise.ipynb
langgraph_agents/: chatbot_with_memory.py  chatbot_with_tools.py
langgraph_basics/: conditional_logic_exercise.ipynb  hello_world.ipynb  looping_graph.ipynb  multiple_inputs.ipynb  sequential_graph.ipynb
rag/: README.md  chroma.py  embedding.py  main.py  pyproject.toml  util.py
rag/chroma/: chroma.sqlite3
